--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "pr-storybook": "build-storybook --no-dll -c .storybook -o artifacts/storybook",
     "vsc-ext": "extList=$(node ./.vscode/.export-ext.js) && code --install-extension $extList",
     "prepare": "husky install"
-
   },
   "peerDependencies": {
     "@denali-design/icons": "1.x",
@@ -43,7 +42,9 @@
     "react": ">=16.0.0"
   },
   "dependencies": {
-    "classnames": "2.2.6"
+    "@types/react-select": "4.0.17",
+    "classnames": "2.2.6",
+    "react-select": "4.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.13.1",
