--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
     "babel-loader": "8.1.0",
+    "cz-conventional-changelog": "3.3.0",
     "denali-css": "2.3.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.4",
@@ -133,5 +134,10 @@
     "gitUsername": "denali-bot",
     "gitEmail": "denali@verizonmedia.com",
     "commitMessage": "Deploy Storybook to GitHub Pages"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
