--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react": ">=16.0.0"
   },
   "dependencies": {
-    "classnames": "2.2.6"
+    "classnames": "2.2.6",
+    "react-select": "4.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.13.1",
@@ -66,6 +67,7 @@
     "@types/enzyme": "3.10.6",
     "@types/jest": "26.0.14",
     "@types/react": "16.9.49",
+    "@types/react-select": "4.0.17",
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
     "babel-loader": "8.1.0",
