feat(DnAlert): add onClose props

--- a/package.json
+++ b/package.json
@@ -122,13 +122,20 @@
       }
     ],
     "plugins": [
-        "@semantic-release/commit-analyzer",
-        "@semantic-release/release-notes-generator",
-        "@semantic-release/changelog",
-        "@semantic-release/npm",
-        ["@semantic-release/github", {
-            "assets": ["package.json", "yarn.lock", "CHANGELOG.md"]
-        }]
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            "package.json",
+            "yarn.lock",
+            "CHANGELOG.md"
+          ]
+        }
+      ]
     ]
   },
   "publishConfig": {
